--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
@@ -2102,7 +2102,7 @@
                             <div class="form-group">
                                 <label>Tipo de Reparación</label>
                                 <select id="idTraslado" class="form-control" asp-for="Encabezado.TipoReparacion" onchange="javascript: onChangeTipoMovimiento();">
-                                    <option value="0">0-Reparado’ </option>
+                                    <option value="0">0-Reparado </option>
 
                                     <option value="4">1- Cotizar BackOffice </option>
 
@@ -2588,7 +2588,7 @@
                                         <td>@item.Fecha</td>
                                         <td>@item.BodegaInicial</td>
                                         <td>@item.BodegaFinal</td>
-                                        <td>@((item.Status == "0" ? "En espera" : item.Status == "1" ? "Aceptado" : "Rechazado"))</td>
+                                        <td>@((item.Status == "0" ? "En espera" : item.Status == "1" ? "Entregado al tecnico" : item.Status == "2" ? "Rechazado" : "Apartado y Trasladado"))</td>
 
                                     </tr>
                                 }
