--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
@@ -280,7 +280,7 @@
                                     <td>@(Model.Tecnicos.Where(a => a.idSAP == id).FirstOrDefault() == null ? "" : Model.Tecnicos.Where(a => a.idSAP == id).FirstOrDefault().Nombre)</td>
 
                                     <td>@item.FechaCreacion.ToString("dd/MM/yyyy")</td>
-                                    <td>@(Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault() == null ? "" : Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault().FechaSISO.Value.ToString("dd/MM/yyyy"))</td>
+                                    <td>@(Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault() == null ? "" : Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault().FechaSISO == null ? "" : Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault().FechaSISO.Value.ToString("dd/MM/yyyy"))</td>
                                     <td>
                                         @(
                                             Model.Productos.Productos.Where(a => a.itemCode == (Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault() == null ? "" : Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault().ItemCode)).FirstOrDefault() == null ? "" : Model.Productos.Productos.Where(a => a.itemCode == Model.InputLlamada.Where(a => a.DocEntry == item.idLlamada).FirstOrDefault().ItemCode).FirstOrDefault().itemName
