cambio en filtros

--- a/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
@@ -407,7 +407,8 @@
 
                                         <option value="1"> Entregado al tecnico </option>
                                         <option value="2">Rechazado </option>
-
+                                        <option value="4">Devolucion/Apartado</option>
+                                        <option value="5">Solicitado a Fabrica</option>
 
 
                                     </select>
@@ -423,7 +424,8 @@
 
                                         <option value="1"> Entregado al tecnico </option>
                                         <option value="2">Rechazado </option>
-
+                                        <option value="4">Devolucion/Apartado</option>
+                                        <option value="5">Solicitado a Fabrica</option>
 
 
                                     </select>
