--- a/Sicsoft.Checkin.Web/Pages/Bodega/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bodega/Index.cshtml
@@ -42,7 +42,7 @@
     <script>
         $(document).ready(function () {
             jQuery(document).ready(function ($) {
-
+                $('.js-example-basic-multiple').select2();
             });
 
             var filtro = '@Model.filtro.Codigo3';
@@ -256,6 +256,8 @@
 
                                     <option value="1"> Entregado al tecnico </option>
                                     <option value="2">Rechazado </option>
+                                    <option value="4">Devolucion/Apartado</option>
+                                    <option value="5">Solicitado a Fabrica</option>
 
                                 </select>
                             </div>
@@ -265,13 +267,19 @@
                         <div class="col-sm-4 pr-1">
                             <div class="form-group">
                                 <label>Estado de la Llamada</label>
-                                <select id="estadoLlamada" class="form-control" asp-for="filtro.Codigo4">
+                              @*   <select id="estadoLlamada" class="form-control" asp-for="filtro.Codigo4">
                                     <option value="0">Seleccione</option>
                                     @foreach (var item in Model.Status)
                                     {
                                         <option value="@item.idSAP">@item.idSAP - @item.Nombre</option>
                                     }
 
+                                </select> *@
+                                <select class="js-example-basic-multiple form-control" id="estadoLlamada" asp-for="filtro.seleccionMultiple" multiple="multiple">
+                                    @foreach (var item in Model.Status)
+                                    {
+                                        <option value="@item.idSAP">@item.idSAP - @item.Nombre</option>
+                                    }
                                 </select>
                             </div>
                         </div>
@@ -279,7 +287,19 @@
                         <div class="col-sm-12">
                             <br />
                         </div>
+                        <div class="col-sm-6 pr-1">
+                            <div class="form-group">
+                                <label>No. Llamada</label>
+                                <input class="form-control" id="noLlamada" type="text" asp-for="filtro.CardCode">
+                            </div>
 
+
+                        </div>
+                        <div class="col-sm-6 pl-1">
+                        </div>
+                        <div class="col-sm-12">
+                            <br />
+                        </div>
 
                         <div class="col-sm-6 pr-1">
                         </div>
