--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Index.cshtml
@@ -18,7 +18,7 @@
     NumberFormatInfo formato = new CultureInfo("en-US").NumberFormat;
     formato.CurrencyGroupSeparator = ",";
     formato.NumberDecimalSeparator = ".";
-
+    var Roles = ((ClaimsIdentity)User.Identity).Claims.Where(d => d.Type == "Roles").Select(s1 => s1.Value).FirstOrDefault().Split("|");
 
 }
 
@@ -290,51 +290,99 @@
     <div class="col-md-12   ">
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Filtro</h4>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h4 class="card-title">Filtro</h4>
+
+                    </div>
+                  @*   <div class="col-sm-6">
+                        <div class="form-check"> 
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox" onclick="check()" id="check1">
+                                <span class="form-check-sign"></span>
+                                Buscar por Boleta y Nombre Cliente
+                            </label>
+                        </div>
+
+                    </div> *@
+                </div>
 
             </div>
             <div class="card-body">
                 <form method="get">
                     <div class="row">
-                        <div class="col-sm-4 pr-1">
-                            <div class="form-group">
-                                <label>Fecha Inicial</label>
-                                <input class="form-control" id="FecInicial" type="date" asp-for="filtro.FechaInicial">
+                        @if (!string.IsNullOrEmpty(Roles.Where(a => a == "66").FirstOrDefault()))
+                        {
+                            <div class="col-sm-4 pr-1">
+                                <div class="form-group">
+                                    <label>Fecha Inicial</label>
+                                    <input class="form-control" id="FecInicial" type="date" asp-for="filtro.FechaInicial">
+                                </div>
+
+
                             </div>
 
-
-                        </div>
-
-                        <div class="col-sm-4 pr-1">
-                            <div class="form-group">
-                                <label>Fecha Final</label>
-                                <input class="form-control" id="FecFinal" type="date" asp-for="filtro.FechaFinal">
+                            <div class="col-sm-4 pr-1">
+                                <div class="form-group">
+                                    <label>Fecha Final</label>
+                                    <input class="form-control" id="FecFinal" type="date" asp-for="filtro.FechaFinal">
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="col-md-4 pl-1">
-
+                            <div class="col-md-4 pl-1">
 
 
-                            <div class="form-group">
-                                <label>Status</label>
 
-                                <select id="heard" class="form-control" asp-for="filtro.Codigo2">
-                                    <option value="0"> Seleccione </option>
-                                    @foreach (var item in Model.Status)
-                                    {
-                                        <option value="@item.idSAP"> @item.Nombre </option>
-                                    }
-                                </select>
+                                <div class="form-group">
+                                    <label>Status</label>
 
+                                    <select id="heard" class="form-control" asp-for="filtro.Codigo2">
+                                        <option value="0"> Seleccione </option>
+                                        @foreach (var item in Model.Status)
+                                        {
+                                            <option value="@item.idSAP"> @item.Nombre </option>
+                                        }
+                                    </select>
+
+                                </div>
                             </div>
-                        </div>
+                        }
+
+                       
 
                         <div class="col-sm-12">
                             <br />
                         </div>
 
+                        <div class="col-sm-6 pr-1">
+                            <div class="form-group">
+                                <label>No. Llamada</label>
+                                <input class="form-control" id="noLlamada" type="text" asp-for="filtro.Texto">
+                            </div>
 
+
+                        </div>
+                        <div class="col-sm-6 pl-1">
+                            <div class="form-group">
+                                <label>Cliente:</label>
+
+                                <input type="text" list="cardcodes" class="form-control form-control-lg" id="cardcode" placeholder="Nombre Cliente" asp-for="filtro.CardCode" onchange="javascript: cambiarProducto();" autocomplete="off">
+
+                                <datalist id="cardcodes">
+                             
+                                    @foreach (var item in Model.Clientes.Clientes)
+                                    {
+                                        <option value="@item.CardCode/@item.CardName"> @item.CardCode - @item.CardName </option>
+                                    }
+                                </datalist>
+
+
+                            </div>
+                            
+                        </div>
+                        <div class="col-sm-12">
+                            <br />
+                        </div>
                         <div class="col-sm-6 pr-1">
                         </div>
                         <div class="col-sm-6 pl-1" style="text-align: right;">
